# fastcache-db-clients

./: .gitignore  README.md  cache-config-simple.yaml  config-cluster-1.yaml  config-cluster-2.yaml  config-cluster.yaml
cpp-client/: CMakeLists.txt
cpp-client/include/: cache-client.hxx  compression.hxx
cpp-client/proto/: cache.proto
cpp-client/src/: cache-client.cxx  compression.cxx
java-client/: pom.xml
java-client/src/main/java/com/fastcache/client/: CompressionUtils.java  FastCacheAsyncClient.java  FastCacheAsyncSimpleClient.java  FastCacheAsyncSmartClient.java  FastCacheClient.java  KeyUtils.java  Main.java
java-client/src/main/java/com/fastcache/client/factory/: FastCacheClientFactory.java
java-client/src/main/java/com/fastcache/client/intercece/: FastCacheClientInterface.java
java-client/src/main/java/com/fastcache/client/intf/: FastCacheClientInterface.java
java-client/src/main/java/com/fastcache/utils/: CompletableFutureObserver.java  CompressionUtils.java  DecompressingObserver.java  Pair.java  RoutingObserver.java  StreamBatchObserver.java  StreamingObserverLatch.java
java-client/src/main/proto/: cache.proto
java-client/src/test/java/com/fastcache/: TestBase.java  TestBaseCluster.java
java-client/src/test/java/com/fastcache/client/: AdvancedCollectionsTest.java  CollectionsTest.java  ContainerStressTest.java  ControlOperationsTest.java  FastCacheAsyncSmartClientTest.java  FastCacheRawStressTest.java  LockMethodProtectionTest.java  LockingValuesTest.java  QueueOperationsTest.java  RawValuesReplicationTest.java  RawValuesTest.java
java-client/src/test/java/com/fastcache/client/cluster/: AdvancedTest.java  ContainerStressTest.java  FastCacheRawStressTest.java
java-client/src/test/java/com/fastcache/client/cluster/leaks/: ListTestImproved.java  QueueTestImproved.java  RawValuesTestImproved.java  VectorTestImproved.java
java-client/src/test/java/com/fastcache/client/cluster/migration/: RawValuesTest.java  RawValuesTestImproved.java
java-client/src/test/java/com/fastcache/client/cluster/payload/: AdvancedCollectionsTest.java  CollectionsTest.java  ControlOperationsTest.java  LockMethodProtectionTest.java  LockingValuesTest.java  QueueOperationsReplicationTest.java  QueueOperationsTest.java  RawValuesTest.java
java-client/src/test/java/com/fastcache/client/cluster/smart/: AdvancedCollectionsTest.java  (+7 more)
java-client/src/test/java/com/fastcache/client/standalone/: AdvancedCollectionsTest.java  CollectionsTest.java  ContainerStressTest.java  ControlOperationsTest.java  FastCacheRawStressTest.java  LockMethodProtectionTest.java  LockingValuesTest.java  QueueOperationsTest.java  RawValuesTest.java  TestBase.java
java-client/src/test/java/com/fastcache/replication/: RawValuesReplicationTest.java
proto/: cache.proto  coordinator.proto
samples/consumer-producer/: pom.xml
samples/consumer-producer/src/main/java/: Main.java
(+7 files in other folders)
